# vibe-wp

./: .env.example  .env.external.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  compose.external.yaml  compose.prod.yaml  compose.shared-db.yaml  compose.stage.yaml  compose.yaml  nginx.conf
.github/workflows/: installer-ci.yml  installer-release.yml
compose/shared-db/: compose.yaml
content/mu-plugins/: vibe-wp-environment.php  vibe-wp-insights.php  vibe-wp-loopback.php  vibe-wp-redis.php
control-panel/: .gitignore  README.md  biome.json  docker-compose.yml  package.json  turbo.json
control-panel/server/: .env.example  Dockerfile  package.json  tsconfig.json  tsdown.config.ts
control-panel/web/: Dockerfile  components.json  index.html  nginx.conf  package.json  (+3 more)
control-panel/web/src-tauri/: Cargo.toml  tauri.conf.json
control-panel/web/src-tauri/src/: main.rs
docs/: architecture.md  configuration.md  control-panel-realtime-map.md  deployment.md  installer.md  mariadb.md  operations.md  performance.md  product-roadmap.md  project-rules.md  quick-start-for-site-owners.md  recovery.md  redis.md  research.md  security.md  staging.md  sync-contract.md  web-tier.md  wp-cli.md
env/: external.env.example  prod.env.example  stage.env.example
installer/: biome.jsonc  package.json  tsconfig.json
public-install/: Caddyfile  Dockerfile  README.md  build-site.sh  install.sh  nginx.conf
site/: checksums.txt  index.html  install.sh
test/: shared-db-isolation.sh
todo/: goal-1.md  installer.md
(+404 files in other folders)
