[package]
name = "vibe-wp-control-panel"
version = "0.1.0"
description = "Desktop shell for the Vibe WP Control Panel"
authors = ["Vibe WP"]
edition = "2024"
publish = false
rust-version = "1.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vibe_wp_control_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.32"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2.8.0"
